--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,6 @@
     tools:context=".MainActivity"
     style="?android:attr/buttonBarButtonStyle">
 
-    <EditText
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/add"
@@ -21,7 +17,8 @@
         android:layout_marginStart="40dp"
         android:layout_alignParentTop="true"
         android:text="Add"
-        android:onClick="addFixture"
+        android:onClick="add"
+
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="40dp" />
 
@@ -32,8 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:text="Update"
-        android:onClick="test"/>
+        android:text="Update" />
 
     <Button
         android:id="@+id/del"
@@ -52,6 +48,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/del" />
+        android:layout_below="@+id/del">
 
+    </ListView>
 </RelativeLayout>
