--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,10 @@
     tools:context=".MainActivity"
     style="?android:attr/buttonBarButtonStyle">
 
-
+<ImageView
+    android:id="@+id/image"
+    android:layout_width="50dp"
+    android:layout_height="50dp" />
     <Button
         android:id="@+id/add"
         style="?android:attr/buttonBarButtonStyle"
