--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,52 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     style="?android:attr/buttonBarButtonStyle">
+<TextView
+    android:id="@+id/instructions"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Click add to add fixture.Click on the fixture to update. Long click to delete"/>
 
-<ImageView
-    android:id="@+id/image"
-    android:layout_width="50dp"
-    android:layout_height="50dp" />
     <Button
         android:id="@+id/add"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
-        android:layout_alignParentTop="true"
-        android:text="Add"
-        android:onClick="add"
-
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="40dp" />
-
-    <Button
-        android:id="@+id/update"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructions"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:text="Update" />
+        android:text="Add"
+        android:onClick="add"  />
 
-    <Button
-        android:id="@+id/del"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="40dp"
-        android:text="Delete"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="40dp" />
+
 
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/del">
+        android:layout_below="@+id/add">
 
     </ListView>
 </RelativeLayout>
