--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateDelete"
+    tools:context=".Update"
     >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update and Delete "
+        android:text="Update fixture "
         android:textAlignment="center"
         android:textSize="25sp"
         android:textAllCaps="true"/>
@@ -209,24 +209,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/titleIconA"
-        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="18dp"
         android:onClick="update"
-        android:text="Update fixture"
-        android:layout_alignLeft="@+id/titleIconA"/>
+        android:text="Update fixture" />
 
-    <Button
-        android:id="@+id/del"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/update"
 
-        android:layout_marginEnd="40dp"
-        android:onClick="delete"
-        android:text="Delete fixture"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="40dp" />
 
 
 
