--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/img1"
+        android:contentDescription="icon1"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="5dp"
@@ -16,6 +17,7 @@
         android:layout_margin="5dp"/>
     <ImageView
         android:id="@+id/img2"
+        android:contentDescription="icon2"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="5dp"
